# Acrobeat_tg_bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: deploy.yml
migrations/: env.py
migrations/versions/: 2025_08_21_1615-1259a3406afc_init.py  2025_08_23_0947-98d11da3e033_add_stracture_for_collect_track_data.py  2025_08_24_1529-9ade217f9d90_add_fk_track_request_track_id.py  2025_08_25_1658-523dd35cc608_edit_user_model.py  2025_08_25_1705-6f2880340618_restore_relationship.py  2025_08_27_1903-7a452950c48c_add_uq_indx_trac_request.py  2025_09_02_2256-77cc69e7979e_refactoring.py  2025_09_03_2246-ad8e671a7185_init.py  2025_11_19_2233-66da485fd4ec_username_was_nullable.py
src/: bot.py
src/domains/: __init__.py
src/domains/cliper/: service.py
src/domains/common/: buttons.py  cleaner_service.py  message_cleanup.py  message_pagination.py  message_processing.py
src/domains/downloader/: repository.py
src/domains/start/: __init__.py  handlers.py  keyboards.py
src/domains/tracks/: __init__.py  cache_repository.py  dependencies.py  filters.py  handlers.py  keyboards.py  schemas.py  service.py
src/domains/tracks/track_cliper/: cache_repository.py  dependencies.py  handlers.py  keyboards.py  message_cleanup.py  schemas.py  service.py  utils.py
src/domains/tracks/track_name/: __init__.py  buttons.py  cache_repository.py  dependencies.py  handlers.py  keyboards.py  message_cleanup.py  models.py  schemas.py
src/domains/tracks/track_request/: buttons.py  dependencies.py  handlers.py  keyboards.py  models.py  repository.py  schemas.py  service.py
src/domains/tracks/track_search/: dependencies.py  handlers.py  service.py  states.py
src/domains/tracks/track_storage/: dependencies.py  models.py  repository.py  schemas.py  service.py
src/domains/tracks/track_storage/track_request_storage/: dependencies.py  models.py  repository.py  schemas.py  service.py
src/domains/users/: cache_repository.py  dependencies.py  models.py  repository.py  schemas.py  services.py
src/middleware/: middleware.py
src/service/: dependencies.py  storage.py  utils.py
src/service/MinIO/: client.py  dependencies.py  service.py
src/service/cache/: abc.py  base_cache_repository.py
src/service/cliper/: dependencies.py  repository.py  schemas.py  service.py
src/service/database/: database.py
src/service/di/: containers.py  providers.py
src/service/downloader/: abstarction.py  abstraction.py  cach_repository.py  cache_repository.py  dependencies.py  repository.py  service.py
src/service/settings/: config.py  config.yaml  logger.py  logger_setup.py
src/service/settings/logger/: config.yaml  filters.py  logger_setup.py
tests/: __init__.py
tests/domains/tracks/: test_filters.py  test_keyboards.py  test_schemas.py  test_service.py
tests/domains/tracks/track_cliper/: test_cache_repository.py  test_keyboards.py  test_message_cleanup.py  test_schemas.py  test_service.py  test_utils.py
tests/domains/tracks/track_name/: test_message_cleanup.py  test_models.py  test_schemas.py
tests/domains/tracks/track_request/: test_repository.py  test_schemas.py  test_service.py
tests/domains/tracks/track_search/: test_service.py  test_states.py
tests/domains/users/: test_cache_repository.py  test_repository.py  test_services.py
tests/service/: test_cache.py  test_cliper.py  test_database.py  test_di.py  test_downloader.py  test_storage.py
